--- a/package.json
+++ b/package.json
@@ -5,15 +5,13 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.8.3",
     "@mui/material": "^5.8.3",
     "@mui/styled-engine-sc": "^5.8.0",
     "@testing-library/user-event": "^14.2.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
